[package]
name = "jwfetch"
version = "0.1.0"
edition = "2021"
authors = ["jiawei397 <jw397@126.com>"]
license = "MIT"
description = "package reqwest with trace"
repository = "https://github.com/jiawei397/rust_jwfetch"
keywords = ["jw", "fetch"]
readme = "README.md"
documentation = "https://docs.rs/jwfetch"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.11"
http = "0.2.8"
serde =  {version = "1", features =["derive"]}
serde_json = "1"
actix-http = "3"
